fixed some issues with menu overflow past edges

--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -19,8 +19,8 @@
 
 .Menu {
   display: none;
-  position: absolute;
-  background-color: rgba(255, 255, 255, 0.8);
+  position: fixed;
+  background-color: rgba(230, 230, 230, 0.9);
   width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
